base/univention-system-setup/umc/js/setup.css
/*
 * Copyright 2014 Univention GmbH
 *
 * http://www.univention.de/
 *
 * All rights reserved.
 *
 * The source code of this program is made available
 * under the terms of the GNU Affero General Public License version 3
 * (GNU AGPL V3) as published by the Free Software Foundation.
 *
 * Binary versions of this program provided by Univention to you as
 * well as other copyrighted, protected or trademarked materials like
 * Logos, graphics, fonts, specific documentations and configurations,
 * cryptographic keys etc. are subject to a license agreement between
 * you and Univention and not subject to the GNU AGPL V3.
 *
 * In the case you use this program under the terms of the GNU AGPL V3,
 * the program is provided in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public
 * License with the Debian GNU/Linux or Univention distribution in file
 * /usr/share/common-licenses/AGPL-3; if not, see
 * <http://www.gnu.org/licenses/>.
 */

.umc-ucssetup-wizard-radio-button-label {
	margin-top: 1.5em;
	margin-bottom: 0
}
.umcContainerWidget:first-child > .umc-ucssetup-wizard-radio-button-label {
	margin-top: 0;
}

.umc-ucssetup-wizard-indent {
	margin-left: 16px;
}

.umc-ucssetup-wizard-livesearch {
	margin-top: 0.75em;
}

.umc-ucssetup-wizard-city-details {
	min-width: 50%;
}

.umc-ucssetup-wizard-change-locale-button {
	margin-top: 0.5em;
	float: right;
}

.umc .umcUCSSetupSoftwareGrid .dojoxGrid {
	min-height: 350px;
}

.umc .umcUCSSetupSoftwareGrid .dojoxGridCell .umcAppDescription {
	color: #818181;
}

.umc .umcUCSSetupSoftwareGrid .dojoxGridCell .dijitButtonContents {
	width: 17px;
}

.umc-setup-page .umcIconInfo {
	background-image: url(setup/info-icon.png);
	width: 16px;
	height: 16px;
}

.umc-setup-page-validation li,
.umc-setup-page-error li {
	padding-bottom: 0.75em;
}

.umc-setup-page-summary ul {
	margin-top: 0;
}

.umc-setup-page-summary p {
	margin-top: 0.75em;
}

.umc-setup-page-software th .dojoxGridRowSelector {
	display: none;
}

.umc-setup-page-role .umcLabelPane,
.umc-setup-page-role-nonmaster-ad .umcLabelPane,
.umc-setup-page-summary .umcLabelPane {
	padding-bottom: 0;
}

.umc-setup-page .city-match td {
	padding-right: 0.5em;
	padding-bottom: 0.25em;
}

.umc-setup-page .umcPageIcon {
	background-repeat: no-repeat;
	height: 120px;
	background-size: contain;
	background-position: center bottom;
}

.umc .umc-setup-page .umcPageHelpText {
	min-height: 50px;
}

@media (max-width: 768px) {
	.umcPageIcon {
		display: none;
	}
}

.umc-setup-page-welcome .umcPageIcon {
	background-image: url(setup/welcome.svg);
}

.umc-setup-page-welcome .umcPageIcon {
	background-image: url(setup/welcome.svg);
}

.umc-setup-page-locale .umcPageIcon {
	background-image: url(setup/locale.svg);
}

.umc-setup-page-role .umcPageIcon,
.umc-setup-page-role-nonmaster-ad .umcPageIcon,
.umc-setup-page-warning-basesystem .umcPageIcon {
	background-image: url(setup/domain.svg);
}

.umc-setup-page-network .umcPageIcon {
	background-image: url(setup/network.svg);
}

.umc-setup-page-credentials-master .umcPageIcon {
	background-image: url(setup/account.svg);
}

.umc-setup-page-credentials-nonmaster .umcPageIcon,
.umc-setup-page-credentials-ad .umcPageIcon {
	background-image: url(setup/credentials.svg);
}

.umc-setup-page-fqdn-master .umcPageIcon,
.umc-setup-page-fqdn-nonmaster-all .umcPageIcon {
	background-image: url(setup/fqdn.svg);
}

.umc-setup-page-software .umcPageIcon {
	height: 180px;
	background-image: url(setup/software.svg);
}

.umc-setup-page-validation .umcPageIcon,
.umc-setup-page-error .umcPageIcon {
	background-image: url(setup/error.svg);
}

.umc-setup-page-summary .umcPageIcon {
	background-image: url(setup/summary.svg);
}

.umc-setup-page-done .umcPageIcon {
	background-image: url(setup/done.svg);
}

